--- a/css/usuario.css
+++ b/css/usuario.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Montserrat:ital,wght@0,200;0,400;0,500;0,700;1,200;1,400;1,500;1,700&display=swap');
+
 /* --------------CARACTERISTICAS GENERALES---------------- */
 
 /* NORMALIZADORES */
@@ -17,6 +19,21 @@ a:hover {
     cursor: pointer;
 }
 
+/* RUTA DE COLORES */
+:root {
+    --color-primary: #99b898;
+    --color-secondary: #feceab;
+    --color-terciary: #ff847c;
+}
+
+/* FUENTES */
+h3 {
+    font-family: 'Amatic SC', cursive;
+    font-size: 2.5rem;
+    overflow-y: hidden;
+    color: var(--color-primary);
+}
+
 /* --------------VERSION DESKTOP---------------- */
 
 /* GENERAL */
@@ -28,32 +45,54 @@ a:hover {
 }
 
 /* HEADER */
+header {
+    height: 20vh;
+    overflow-y: hidden;
+    background-color: var(--color-primary);
+}
 
+.nav-info {
+    height: auto;
+}
+
+    .nav-info h1 {
+        overflow-y: hidden;
+    }
 
 /* INICIO SESION */
 section {
     width: 100%;
-    height: auto;
+    height: 80vh;
     display: flex;
     justify-content: center;
-    margin-top: 10rem;
+    background-color: var(--color-secondary);
 }
 
     #registro section {
         flex-direction: column;
         align-items: center;
+        height: 100vh;
     }
 
 form {
     width: 80%;
     max-width: 20rem;
     height: auto;
+    max-height: 15rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    margin-top: 10rem;
+    border: 3px solid var(--color-primary);
+    border-radius: 4px;
+    padding: 1rem;
+    box-shadow: .3rem .3rem .1rem rgba(128, 128, 128, 0.226);
 }
 
     #registro section form {
-        margin-top: 4rem;
+        margin-top: 1rem;
+        overflow-y: hidden;
+        max-height: 20rem;
     }
 
     form input {
@@ -75,6 +114,7 @@ form {
         justify-content: center;
         margin: 1rem auto .5rem auto;
         color: rgb(168, 0, 0);
+        text-align: center;
     }
 
 .botones {
@@ -90,8 +130,52 @@ form {
         margin-right: 1rem;
     }
 
+    .botones a {
+        overflow-y: hidden;
+    }
+
     #registro form button {
         margin: .8rem auto auto auto;
         width: 70%;
     }
 
+#registro section .hay-usuario {
+    margin-top: 1rem;
+    color: var(--color-primary);
+}
+
+/* --------------RESPONSIVE---------------- */
+
+@media (max-width: 600px) {
+
+    /* HEADER */
+    .logo {
+        display: none;
+    }
+
+    .nav-bar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
+@media (max-width: 430px) {
+
+    /* HEADER */
+    .titulo-pag {
+        font-size: 3rem;
+    }
+
+    .subtitulo-pag {
+        font-size: 2rem;
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 350px) {
+    form {
+        height: 15rem;
+    }
+}
