--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
 }
 
 .nav-bar-items {
-    width: 20%;
+    width: 25%;
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -45,6 +45,10 @@
 }
 
 li a {
+    color: var(--color-secondary);
+}
+
+li a:hover{
     color: var(--color-secondary);
 }
 
@@ -73,7 +77,7 @@ li a {
 }
 
 .agregar-produc-form {
-    width: 40%;
+    width: 100%;
     height: fit-content;
     border: solid 2px var(--color-primary);
     padding: 2%;
@@ -81,5 +85,75 @@ li a {
 
 input {
     width: 100%;
-    /* border: solid 1px var(--color-terciary); */
+    border: solid 0.5px var(--color-primary);
+    border-radius: 10px;
+    padding: 1%;
+}
+
+input :focus {
+    border: solid 1px gray;
+}
+
+/* label{
+    color: var(--color-secondary);
+} */
+
+.modal-body {
+    background-color: var(--color-primary);
+    margin: 0%;
+}
+
+.modal-title{
+    color: var(--color-terciary);
+}
+
+.btn-success {
+    background-color: var(--color-terciary);
+    border: solid 1px var(--color-terciary);
+}
+
+.btn-success:hover {
+    background-color: var(--color-secondary);
+    border: solid 1px var(--color-secondary);
+    color: gray;
+}
+
+/* .modal-footer{
+    background-color: var(--color-primary);
+} */
+
+.btn-danger {
+    background-color: var(--color-terciary);
+    border: solid 1px var(--color-terciary);
+}
+
+/* ----------RESPONSIVE----------- */
+
+/* TABLET HORIZONTAL */
+@media (min-width:815px) and (max-width:1111px) {
+    .nav-bar-items {
+        width: 35%;
+    }    
+}
+
+@media (min-width:633px) and (max-width:815px) {
+    .nav-bar-items {
+        width: 38%;
+        font-size: 1.8rem;
+    }
+    
+    .titulo-pag {
+        font-size: 3.2rem;
+    }
+}
+
+@media (max-width:633px) {
+    .nav-bar-items {
+        width: 40%;
+        font-size: 1.5rem;
+    }
+    
+    .titulo-pag {
+        font-size: 2.9rem;
+    }
 }
