--- a/css/usuario.css
+++ b/css/usuario.css
@@ -71,7 +71,7 @@ section {
     #registro section {
         flex-direction: column;
         align-items: center;
-        height: 100vh;
+        height: 80vh;
     }
 
 form {
@@ -157,6 +157,11 @@ form {
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .nav-info {
+        margin-top: .8rem;
+
     }
 
 }
